monticore-generator/src/test/resources/cocos/invalid/A4097/A4097b.mc4
package cocos.invalid.A4097;

grammar A4097b {
  A;
  
  astrule A astextends java.util.Observer;
}